theme: Pad table cell and ensure top v-align
Additional changes:

  - Use monospace font for time element, so the space used for time
    display is consistent on the post listing page.

--- a/themes/blog/static/css/styles.css
+++ b/themes/blog/static/css/styles.css
@@ -55,16 +55,17 @@ h1 {
   margin-bottom: .2rem;
 }
 
-.td-top {
+td {
+  padding: .2rem;
   vertical-align: top;
+}
+
+time {
+  font: .9rem monospace;
+  color: #444;
 }
 
 .h-time {
   display: block;
   font-weight: normal;
-}
-
-time {
-  font-size: .9rem;
-  color: #444;
 }
